# pitot_airspeed

./: CMakeLists.txt  README.md  stm32f401ccux_FLASH.ld
Inc/: i2c.h  stm32f4xx_hal.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Src/: i2c.c  main.c  stm32f4xx_it.c
Startup/: startup_stm32f401ccux.s
cmake/: vscode_generated.cmake
drivers/CMSIS/: CMakeLists.txt  cmake_install.cmake
drivers/HAL/: CMakeLists.txt  cmake_install.cmake
drivers/LL/: CMakeLists.txt  cmake_install.cmake
ssd1306/: CMakeLists.txt
ssd1306/Inc/: ssd1306.h
ssd1306/Src/: ssd1306.c
